--- a/www/views/game.html
+++ b/www/views/game.html
@@ -16,8 +16,10 @@
     </md-list>
 
     <div ng-repeat="game in games track by $index">
+      <div ng-click="loadGame($index)">
       {{game.teamH}} {{game.scoreHgoals}}:{{game.scoreHpoints}} - 
       {{game.teamO}} {{game.scoreOgoals}}:{{game.scoreOpoints}}
+    </div>
     </div>
   
        
