--- a/www/views/home.html
+++ b/www/views/home.html
@@ -6,18 +6,55 @@
   </md-toolbar>
 
   <md-content flex layout-padding>
-      <md-list>
-      <md-list-item class="md-1-line" ng-repeat="name in tournaments track by $index">
-            <div class="md-list-item-text">
-            {{name}}
-            <md-divider ng-if="!$last"></md-divider>
-          </div>
-        </md-list-item>
-    </md-list>
+      <!--<md-list>
+        <md-list-item class="md-1-line" ng-repeat="name in tournaments track by $index">
+              <div class="md-list-item-text">
+              {{name}}
+              <md-divider ng-if="!$last"></md-divider>
+            </div>
+          </md-list-item>
+      </md-list>-->
+
+
+      <!-- exact table from live demo -->
+      <md-table-container>
+        <table md-table >
+          <thead md-head md-order="myOrder" >
+            <tr md-row>
+              <th md-column md-order-by="name" ><span>Team</span></th>
+              <th md-column md-numeric md-order-by="played" ><span>P</span></th>
+              <th md-column md-numeric>W</th>
+              <th md-column md-numeric>D</th>
+              <th md-column md-numeric>L</th>
+              <th md-column md-numeric>F</th>
+              <th md-column md-numeric>A</th>
+              <th md-column md-numeric>PD</th>
+              <th md-column md-numeric md-order-by="points">Pts</th>
+            </tr>
+          </thead>
+          <tbody md-body>
+            <tr md-row ng-repeat="team in teamsTable | orderBy: myOrder track by $index ">
+              <td md-cell>{{team.name}}</td>
+              <td md-cell>{{team.played}}</td>
+              <td md-cell>{{team.won}}</td>
+              <td md-cell>{{team.drew}}</td>
+              <td md-cell>{{team.lost}}</td>
+              <td md-cell>{{team.for}}</td>
+              <td md-cell>{{team.against}}</td>
+              <td md-cell>{{team.diff}}</td>
+             <td md-cell>{{team.points}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </md-table-container>
+
+
 
     <div ng-repeat="game in games track by $index">
+      <div ng-click="loadGame($index)">
       {{game.teamH}} {{game.scoreHgoals}}:{{game.scoreHpoints}} - 
       {{game.teamO}} {{game.scoreOgoals}}:{{game.scoreOpoints}}
+      </div>
     </div>
   
        
