--- a/www/views/dialogGame.html
+++ b/www/views/dialogGame.html
@@ -38,7 +38,7 @@
             <div flex >
                 <md-input-container class="md-block score" md-no-float>
                     <label>Goals</label>
-                    <input name="postalCode" ng-model="game.scoreHgoals" >
+                    <input type="number" name="postalCode" ng-model="game.scoreHgoals" >
                 </md-input-container>
             </div>
 
@@ -47,7 +47,7 @@
             <div flex layout-align="center center">
                 <md-input-container class="md-block score" md-no-float>
                     <label>Points</label>
-                    <input name="postalCode" ng-model="game.scoreHpoints" >
+                    <input type="number" name="postalCode" ng-model="game.scoreHpoints" >
                 </md-input-container>
             </div>
 
@@ -95,7 +95,7 @@
             <div flex >
                 <md-input-container class="md-block score" md-no-float>
                     <label>Goals</label>
-                    <input name="postalCode" ng-model="game.scoreOgoals" >
+                    <input type="number" name="postalCode" ng-model="game.scoreOgoals" >
                 </md-input-container>
             </div>
 
@@ -106,7 +106,7 @@
             <div flex layout-align="center center">
                 <md-input-container class="md-block score" md-no-float>
                     <label>Points</label>
-                    <input name="postalCode" ng-model="game.scoreOpoints" >
+                    <input type="number" name="postalCode" ng-model="game.scoreOpoints" >
                 </md-input-container>
             </div>
 
