--- a/www/views/home.html
+++ b/www/views/home.html
@@ -5,19 +5,33 @@
     </div>
   </md-toolbar>
 
-  <md-content flex layout-padding>
-      <md-list>
-        <md-list-item class="md-1-line" ng-repeat="tournament in tournaments track by $index">
-              <div class="md-list-item-text">
-              {{tournament.tournamentName}} - {{tournament.tournamentDate}}
-              <md-divider ng-if="!$last"></md-divider>
-            </div>
+  <md-content flex>
+      <md-list >
+        <md-subheader >Tournaments List</md-subheader>
+        <md-list-item class="md-2-line" ng-repeat="tournament in tournaments track by $index" ng-click="runTournament(tournament)">
+              <div class="md-list-item-text" layout="column">
+              <h3>{{tournament.tournamentName}}</h3>
+              <h4>{{tournament.tournamentComment}}</h4>
+              <md-button class="md-icon-button md-secondary" aria-label="add tournament" ng-click="runTournament(tournament)">
+                  <md-icon class="md-primary" md-svg-src="/resources/ic_launch_black_24px.svg"></md-icon>
+              </md-button>
+              <md-button class="md-icon-button md-secondary" aria-label="add tournament" ng-click="editTournament(tournament)">
+                  <md-icon  md-svg-src="/resources/ic_edit_black_24px.svg"></md-icon>
+              </md-button>
+              <md-button class="md-icon-button md-secondary" aria-label="add tournament" ng-click="confirmDelete(tournament)">
+                  <md-icon  md-svg-src="/resources/ic_delete_black_24px.svg"></md-icon>
+              </md-button>
+             </div>
+            <md-divider ></md-divider>
           </md-list-item>
+          
       </md-list>
 
-    <md-button class="md-fab md-mini" aria-label="add tournament" ng-click="createTournament()">
-        <md-icon md-svg-src="/resources/ic_add_circle_outline_black_24px.svg"></md-icon>
-    </md-button>
+    <div layout="row" layout-align="end center"> 
+        <md-button class="md-fab md-mini" aria-label="add tournament" ng-click="createTournament()">
+            <md-icon md-svg-src="/resources/ic_add_circle_outline_black_24px.svg"></md-icon>
+        </md-button>
+    </div>
 
 
      
