--- a/www/views/createTournament.html
+++ b/www/views/createTournament.html
@@ -6,36 +6,58 @@
   </md-toolbar>
 
   <md-content flex layout-padding >
-
-        <div layout="row" >
-
-            <md-input-container class="md-block" flex-gt-sm>
+        <form name="tSetup" >
+            
+            <md-input-container class="md-block">
                 <label>Tournament Name</label>
-                <input ng-model="tournament.tournamentName">
+                <input name="name" required ng-model="tournament.tournamentName">
+                <div ng-messages="tSetup.name.$error">
+                    <div ng-message="required">Name is required.</div>
+                </div>
             </md-input-container>
-
-            <md-input-container>
-                <label>Enter date</label>
-                <md-datepicker ng-model="tournament.tournamentDate"></md-datepicker>
-            </md-input-container>
-        </div>
-
-        <div layout="row" layout-wrap class="create-page">
-            <md-input-container ng-repeat="team in tournament.teams track by $index" flex-gt-sm>
-                <label>Team #{{$index+1}}</label>
-                <input ng-model="tournament.teams[$index]">
-                <md-icon md-svg-src="resources/ic_delete_black_24px.svg" ng-click="removeTeam($index)"></md-icon>
-            </md-input-container>
-        </div>
         
         
+            <md-input-container class="md-block">
+                <label>Enter Comment / Notes</label>
+                <input ng-model="tournament.tournamentComment">
+            </md-input-container>
 
+            <div layout="row" layout-wrap >
+                <md-input-container flex="33">
+                    <label>Points for Win</label>
+                    <input ng-model="tournament.pointsForWin">
+                </md-input-container>
+                 <md-input-container flex="33">
+                    <label>Points for Tie</label>
+                    <input ng-model="tournament.pointsForDraw">
+                </md-input-container>
+                 <md-input-container flex="33">
+                    <label>Points for Loss</label>
+                    <input ng-model="tournament.pointsForLoss">
+                </md-input-container>
+            </div>
+           
 
+            <div layout="row" layout-wrap class="create-page">
+                <md-input-container ng-repeat="team in tournament.teams track by $index" >
+                    <label>Team #{{$index+1}}</label>
+                    <input ng-model="tournament.teams[$index]">
+                    <md-icon md-svg-src="resources/ic_delete_black_24px.svg" ng-click="removeTeam($index)"></md-icon>
+                </md-input-container>
+            </div>
+    
+        </form>
+        
+        
     <div layout="row" >
-        <form ng-submit="addTeam()">
+        <form name="addform" ng-submit="addTeam()">
             <md-input-container md-no-float>
                 <label>add new team</label>
-                <input type="text" ng-model="inputTeam" ng-blur="addTeam()" >
+                <input type="text" ng-model="inputTeam" ng-blur="addTeam()" name="name" size>
+                <!--<div ng-show="addform.name.$error.size">sizerequired</div>-->
+                <div ng-messages="addform.name.$error">
+                    <div ng-message="size">Must be at least 2 teams added.</div>
+                </div>
             </md-input-container>
         </form>
 
@@ -47,9 +69,17 @@
                 </md-optgroup>
             </md-select>
         </md-input-container>
+
+        <br>
     </div>
+        
+        <!--<div ng-show="addform.name.$error.size">Must be at least 2 teams added</div>
+<div ng-show="addform.name.$error.required">required</div>-->
+
+
 
     <div layout="row" layout-align="end center">
+        <md-button class="md-raised md-primary" ng-click="cancel()">Cancel</md-button>
         <md-button class="md-raised md-primary" ng-click="saveTournament()">Save</md-button>
     <div layout="row" >
        
