--- a/www/css/app.css
+++ b/www/css/app.css
@@ -30,16 +30,40 @@ md-icon {
     margin-bottom: 0;
     margin-right: 16px;
     padding: 2px 20px 2px 0;
-
 }
 
 md-input-container {
-    margin: 0;
+    margin-top: 8px;
+    margin-bottom:8px;
 }
 
-md-input-container:not(.md-input-invalid).md-input-focused .md-input {
-    border-color: your_color_here;
+.list-drag {
+  cursor: move;
+  cursor: -webkit-grabbing;
 }
 
+p {
+    margin-bottom: 0px;
+    margin-top: 4px;
+}
 
+.wrap {
+    /*white-space: -moz-pre-wrap;  
+    white-space: -o-pre-wrap; 
+    white-space: pre-wrap;  
+    word-wrap: break-word; */
+}
 
+.bold {
+    font-weight: bold;
+}
+
+.layout-padding {
+    padding: 4px 4px;
+}
+
+.comment {
+    padding-top: 0;
+    padding-bottom: 0;
+    font-size: smaller;
+}
