--- a/platforms/android/assets/www/views/dialogGame.html
+++ b/platforms/android/assets/www/views/dialogGame.html
@@ -5,7 +5,7 @@
         <h2>Game</h2>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="cancel()">
-          <md-icon md-svg-src="resources/ic_clear_white_24px.svg" aria-label="Close dialog"></md-icon>
+          <md-icon md-svg-src="resources/ic_cancel_white_24px.svg" aria-label="Close dialog"></md-icon>
         </md-button>
       </div>
     </md-toolbar>
@@ -23,12 +23,12 @@
             <div flex>
                 <div layout="column" layout-align="center end">
                     <div flex>
-                        <md-button class="md-fab md-mini" aria-label="add score" ng-click="modScore(0,0,1)">
+                        <md-button class="md-icon-button md-primary" aria-label="add score" ng-click="modScore(0,0,1)">
                         <md-icon md-svg-src="./resources/ic_add_circle_outline_black_24px.svg"></md-icon>
                         </md-button>
                     </div>
                     <div flex>
-                        <md-button class="md-fab md-mini" aria-label="add score" ng-click="modScore(0,0,-1)">
+                        <md-button class="md-icon-button md-primary" aria-label="add score" ng-click="modScore(0,0,-1)">
                         <md-icon md-svg-src="./resources/ic_remove_circle_outline_black_24px.svg"></md-icon>
                         </md-button>
                     </div>
@@ -54,12 +54,12 @@
             <div flex>
                 <div layout="column" layout-align="center start">
                 <div flex>
-                    <md-button class="md-fab md-mini" aria-label="add score" ng-click="modScore(0,1,1)">
+                    <md-button class="md-icon-button md-primary" aria-label="add score" ng-click="modScore(0,1,1)">
                     <md-icon md-svg-src="./resources/ic_add_circle_outline_black_24px.svg"></md-icon>
                     </md-button>
                 </div>
                 <div flex>
-                    <md-button class="md-fab md-mini" aria-label="add score" ng-click="modScore(0,1,-1)">
+                    <md-button class="md-icon-button md-primary" aria-label="add score" ng-click="modScore(0,1,-1)">
                     <md-icon md-svg-src="./resources/ic_remove_circle_outline_black_24px.svg"></md-icon>
                     </md-button>
                 </div>
@@ -80,12 +80,12 @@
             <div flex>
             <div layout="column" layout-align="center end">
                 <div flex>
-                <md-button class="md-fab md-mini" aria-label="add score" ng-click="modScore(1,0,1)">
+                <md-button class="md-icon-button md-primary" aria-label="add score" ng-click="modScore(1,0,1)">
                     <md-icon md-svg-src="./resources/ic_add_circle_outline_black_24px.svg"></md-icon>
                 </md-button>
                 </div>
                 <div flex>
-                <md-button class="md-fab md-mini" aria-label="add score" ng-click="modScore(1,0,-1)">
+                <md-button class="md-icon-button md-primary" aria-label="add score" ng-click="modScore(1,0,-1)">
                     <md-icon md-svg-src="./resources/ic_remove_circle_outline_black_24px.svg"></md-icon>
                 </md-button>
                 </div>
@@ -113,12 +113,12 @@
             <div flex>
             <div layout="column" layout-align="center start">
                 <div flex>
-                <md-button class="md-fab md-mini" aria-label="add score" ng-click="modScore(1,1,1)">
+                <md-button class="md-icon-button md-primary" aria-label="add score" ng-click="modScore(1,1,1)">
                     <md-icon md-svg-src="./resources/ic_add_circle_outline_black_24px.svg"></md-icon>
                 </md-button>
                 </div>
                 <div flex>
-                <md-button class="md-fab md-mini" aria-label="add score" ng-click="modScore(1,1,-1)">
+                <md-button class="md-icon-button md-primary" aria-label="add score" ng-click="modScore(1,1,-1)">
                     <md-icon md-svg-src="./resources/ic_remove_circle_outline_black_24px.svg"></md-icon>
                 </md-button>
                 </div>
@@ -139,8 +139,8 @@
       <md-button ng-click="cancel()">
         Cancel
       </md-button>
-      <span flex></span>
-      <md-button ng-click="reset()">
+      <!--<span flex></span>-->
+      <md-button flex ng-click="reset()">
        Reset
       </md-button>
       <md-button ng-click="save()" md-autofocus>
