--- a/www/views/dialogGame.html
+++ b/www/views/dialogGame.html
@@ -5,7 +5,7 @@
         <h2>Game</h2>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="cancel()">
-          <md-icon md-svg-src="resources/ic_clear_white_24px.svg" aria-label="Close dialog"></md-icon>
+          <md-icon md-svg-src="resources/ic_cancel_white_24px.svg" aria-label="Close dialog"></md-icon>
         </md-button>
       </div>
     </md-toolbar>
@@ -139,8 +139,8 @@
       <md-button ng-click="cancel()">
         Cancel
       </md-button>
-      <span flex></span>
-      <md-button ng-click="reset()">
+      <!--<span flex></span>-->
+      <md-button flex ng-click="reset()">
        Reset
       </md-button>
       <md-button ng-click="save()" md-autofocus>
